# khadas_vim3_Qt6

./: README.md
ClusterTutorial/: ClusterTutorial.qmlproject.qtds
clutch_dashboard/: animation.cpp  animation.h  atv_dashboard.pro  backendgp.cpp  (+11 more)
clutch_dashboard/qml/: CMakeLists.txt  qmlmodules  qtquickcontrols2.conf
clutch_dashboard/qml/asset_imports/Quick3DAssets/Sherp2/: Sherp2.qml  qmldir
clutch_dashboard/qml/asset_imports/Quick3DAssets/Sherp2/_icons/: Sherp2_libicon@2x
clutch_dashboard/qml/asset_imports/Quick3DAssets/Sherp2/meshes/: sHERP_COLOR_403___C906BBC760572095F726B39B13C9EDE80CDE5667.mesh  sHERP_COLOR_42___124962E701BC8CA5C3EF640075110652EBBF4D01.mesh  sHERP_COLOR_42___34ECF0BAB04CD6FE76F04275FC81D9EDAD8A545A.mesh  sHERP_COLOR_42___3F635CC986B490470081D15B208407244DE6D3D9.mesh  sHERP_COLOR_42___4CD2B3EFBF5D2D16A053FA74B8E90FA84BD3AF31.mesh  sHERP_COLOR_42___62A847F87F404A1386DF7AE3239C498F49D94DDE.mesh  sHERP_COLOR_42___7325FF14D543F8139898A6CB429172C2196F7F62.mesh  sHERP_COLOR_42___8D2972270AF900137B422467C6F9182DFA20AFC3.mesh  sHERP_COLOR_42___ADAFBC7721E9FC85F0544A2F0D120D0E18F8360B.mesh  sHERP_COLOR_42___C906BBC760572095F726B39B13C9EDE80CDE5667.mesh
clutch_dashboard/qml/content/: App.qml  Arrows.ui.qml  Backgrounds_195_610.ui.qml  Friction.ui.qml  Gp.qml  IsoIcon.ui.qml  Iso_195_156.ui.qml  Mainform.ui.qml  Mainform.ui.qml.autosave
clutch_dashboard/qml/imports/Data/: .goutputstream-4YJ8X1  Values.qml
clutch_dashboard/qml/imports/atv_dashboard/: CMakeLists.txt  qmldir
clutch_dashboard/qml/imports/atv_dashboard/designer/: plugin.metainfo
(+31 files in other folders)
